# sentiment-module

./: .gitignore  pyproject.toml  sentiment.py  setup.py
data/: _twitter.py  _utils.py
models/: _huggingface.py  _polarity.py
preprocessing/: _twitter.py
sentimod/: sentiment.py
sentimod/visualization/EDA/: _profiling.py
src/: sentiment.py
src/data/: _google.py
src/models/: _huggingface.py
src/sentimod_hmk/: __init__.py  sentiment.py
src/sentimod_hmk/models/: _polarity.py
visualization/EDA/: _profiling.py
